[gd_scene load_steps=3 format=3 uid="uid://der2fnidgfals"]

[ext_resource type="Script" uid="uid://dps688jkng1o4" path="res://scripts/HUD.gd" id="1_fls4u"]
[ext_resource type="Texture2D" uid="uid://4jdlo3tat2pr" path="res://assets/crosshair.png" id="1_qpvh6"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_fls4u")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_qpvh6")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="ArmorLabel" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="CurrentAmmoLabel" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="ReserveAmmoLabel" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="BuyPromptLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Open buy menu (B) -- 25 secs"
horizontal_alignment = 1
vertical_alignment = 1
